--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
+    "lenis": "^1.3.1",
     "lucide-react": "^0.473.0",
     "motion": "^11.18.1",
     "react": "^18.3.1",
@@ -20,12 +21,6 @@
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
-    "@studio-freight/react-lenis": "^0.0.47",
-    "axios": "^1.6.7",
-    "framer-motion": "^11.1.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
